[gd_scene load_steps=8 format=2]

[ext_resource path="res://GameHUDRelated/Tooltips/TooltipBodyConstructors/TooltipBody.tscn" type="PackedScene" id=1]
[ext_resource path="res://GameInfoRelated/ColorSynergyRelated/DominantSynergies/DomSyn_Black_Related/Assets/GUIAssets/WholeScreen_TextBorder_Side.png" type="Texture" id=2]
[ext_resource path="res://GameInfoRelated/ColorSynergyRelated/DominantSynergies/DomSyn_Black_Related/Assets/GUIAssets/WholeScreen_TextBorder_Top.png" type="Texture" id=3]
[ext_resource path="res://GameInfoRelated/ColorSynergyRelated/DominantSynergies/DomSyn_Black_Related/GUI/DescriptionPanel/Black_DescriptionPanel.gd" type="Script" id=4]
[ext_resource path="res://Fonts/consolas/CONSOLA.TTF" type="DynamicFontData" id=5]
[ext_resource path="res://MiscRelated/GUI_Category_Related/BaseTowerSpecificInfoPanel/BaseTowerSpecificInfoPanel_BodyBackground.png" type="Texture" id=6]

[sub_resource type="DynamicFont" id=1]
size = 20
font_data = ExtResource( 5 )

[node name="Black_DescriptionPanel" type="MarginContainer"]
margin_right = 340.0
margin_bottom = 180.0
rect_min_size = Vector2( 340, 180 )
mouse_filter = 2
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 340.0
margin_bottom = 180.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 6 )
expand = true

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_right = 340.0
margin_bottom = 180.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 0

[node name="SideBorder" type="TextureRect" parent="HBoxContainer"]
margin_right = 8.0
margin_bottom = 180.0
mouse_filter = 2
texture = ExtResource( 2 )
stretch_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 8.0
margin_right = 332.0
margin_bottom = 180.0
mouse_filter = 2
size_flags_horizontal = 3
custom_constants/separation = 0

[node name="SideBorder" type="TextureRect" parent="HBoxContainer/VBoxContainer"]
margin_right = 324.0
margin_bottom = 8.0
mouse_filter = 2
texture = ExtResource( 3 )
stretch_mode = 2

[node name="ContentMargin" type="MarginContainer" parent="HBoxContainer/VBoxContainer"]
margin_top = 8.0
margin_right = 324.0
margin_bottom = 45.0
mouse_filter = 2
custom_constants/margin_right = 6
custom_constants/margin_top = 6
custom_constants/margin_left = 6
custom_constants/margin_bottom = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/VBoxContainer/ContentMargin"]
margin_left = 6.0
margin_top = 6.0
margin_right = 318.0
margin_bottom = 31.0

[node name="PathName" type="Label" parent="HBoxContainer/VBoxContainer/ContentMargin/VBoxContainer"]
margin_left = 156.0
margin_right = 156.0
margin_bottom = 21.0
size_flags_horizontal = 6
custom_colors/font_color = Color( 0.866667, 0.866667, 0.866667, 1 )
custom_fonts/font = SubResource( 1 )

[node name="TooltipBody" parent="HBoxContainer/VBoxContainer/ContentMargin/VBoxContainer" instance=ExtResource( 1 )]
margin_top = 25.0
margin_right = 312.0
margin_bottom = 25.0
default_font_color = Color( 0.866667, 0.866667, 0.866667, 1 )
default_font_size = 14

[node name="SideBorder2" type="TextureRect" parent="HBoxContainer/VBoxContainer"]
margin_top = 172.0
margin_right = 324.0
margin_bottom = 180.0
mouse_filter = 2
size_flags_vertical = 10
texture = ExtResource( 3 )
stretch_mode = 2

[node name="SideBorder2" type="TextureRect" parent="HBoxContainer"]
margin_left = 332.0
margin_right = 340.0
margin_bottom = 180.0
mouse_filter = 2
texture = ExtResource( 2 )
stretch_mode = 2
